# catfetch

./: Cargo.toml  Makefile  README.md  configure
src/: info.rs  main.rs
