[package]
name = "catfetch"
version = "1.5.0" # better fallbacks
edition = "2024"
authors = [ "Toxikuu" ]
description = "cute fetch script featuring a cat"
license = "GPL-3.0"

[profile.release]
strip = "symbols"
lto = "fat"
panic = "abort"

[dependencies.anyhow]
version = "1"
default-features = false
